tests/typec-test/test_out/spec-with-funcs.txt
error: type mismatch
  --> spec-with-funcs\root.ctl:20:20
   |
20 | fn main -> uint => uint\new()
   |                    ^^^^^^^^^^ mismatch occurred here
   |
   = info: expected 'uint' but got '()'

info: tir repr of functions:
 fn [0\Glue, any] 0\glue_up(var0: param 1) -> 0\Glued[param 1] return {
    0\Glue\use_on[param 0, param 1](0\Glue\new[param 0](), var0)
}

fn [] 1\uint\0\new() -> uint return 0

fn [any] 1\uint\0\use_on(var0: uint, var1: param 0) -> 0\Glued[param 0] return 0\Glued[param 0]\{var1}

fn [] uint\0\new() -> () return {
}



